# twitch-recorder

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix
config/: twitch-recorder.toml
src/twitch_recorder/: __init__.py  __main__.py  config.py  recorder.py  twitch.py
src/twitch_recorder/downloader/: __init__.py  lock_file.py  yt_dlp_logger.py
